extends VBoxContainer

onready var player_name = get_node("PlayerName")
onready var player_up = get_node("ActiveButtons/UpButton/CheckBox")
onready var player_down = get_node("ActiveButtons/DownButton/CheckBox")
onready var player_left = get_node("ActiveButtons/LeftButton/CheckBox")
onready var player_right = get_node("ActiveButtons/RightButton/CheckBox")
onready var player_fire = get_node("ActiveButtons/FireButton/CheckBox")
